--- a/Sample.Hosted/Pages/Shared/_Navbar.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Navbar.cshtml
@@ -1,6 +1,6 @@
 @using DRN.Framework.SharedKernel.Enums
 
-<nav class="navbar navbar-expand-lg container bg-primary" data-bs-theme="dark">
+<header class="navbar navbar-expand-lg container bg-primary" data-bs-theme="dark">
     <div class="container-fluid">
         <a class="navbar-brand d-flex align-items-center link-body-emphasis text-decoration-none" href="@PageFor.Root.Home">
             <i class="bi bi-bootstrap-reboot me-2" style="font-size: 1.5rem; "></i>@ScopeContext.Settings.ApplicationName
@@ -8,7 +8,7 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <nav class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" active-page="@PageFor.Root.Home" href="@PageFor.Root.Home">Home</a>
@@ -53,6 +53,6 @@
                     </li>
                 }
             </ul>
-        </div>
+        </nav>
     </div>
-</nav>
+</header>
