--- a/Sample.Hosted/Pages/Shared/_Sidebar.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Sidebar.cshtml
@@ -34,10 +34,10 @@
         <ul id="SidebarSettings" class="nav nav-pills nav-flush flex-column">
             <li id="SidebarSettingsItem" class="nav-item">
                 <div class="dropup" title="@settingsTitle" data-bs-toggle="tooltip" data-bs-placement="right">
-                    <a id="SidebarSettingsToggle" class="btn nav-link d-flex align-items-center link-body-emphasis text-decoration-none dropdown-toggle p-2 border-top rounded-0"
+                    <button id="SidebarSettingsToggle" class="btn nav-link d-flex align-items-center link-body-emphasis text-decoration-none dropdown-toggle p-2 border-top rounded-0"
                        data-bs-toggle="dropdown" aria-expanded="false">
                         <span class="bi bi-gear-fill" style="font-size: 1.25rem;">@settingsText</span>
-                    </a>
+                    </button>
                     <ul class="dropdown-menu text-small shadow" aria-labelledby="SidebarSettingsToggle">
                         <li><a class="dropdown-item" href="#">New project...</a></li>
                         <li><a class="dropdown-item" href="#">Advanced</a></li>
