--- a/Sample.Hosted/Pages/Shared/_Layout.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Layout.cshtml
@@ -7,21 +7,21 @@ https://getbootstrap.com/docs/5.3/examples/
 https://getbootstrap.com/docs/5.3/examples/sidebars/
 *@
 <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewData[ViewDataFor.Title] - @ScopeContext.Settings.ApplicationName</title>
 
     @*https://icons.getbootstrap.com/#usage*@
-    <link rel="icon" type="image/x-icon" href="/images/100.jpeg"/>
+    <link rel="icon" type="image/x-icon" href="/images/100.jpeg">
     <link rel="stylesheet" crossorigin="anonymous" referrerpolicy="no-referrer"
           href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"/>
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH">
     <link rel="stylesheet" crossorigin="anonymous" referrerpolicy="no-referrer"
           href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-          integrity="sha256-9kPW/n5nn53j4WMRYAxe9c1rCY96Oogo/MKSVdKzPmI="/>
+          integrity="sha256-9kPW/n5nn53j4WMRYAxe9c1rCY96Oogo/MKSVdKzPmI=">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="~/css/site.css?v=@DateTime.Now.Ticks"/>
-    <link rel="stylesheet" href="~/css/sidebars.css?v=@DateTime.Now.Ticks"/>
+    <link rel="stylesheet" href="~/css/site.css?v=@DateTime.Now.Ticks">
+    <link rel="stylesheet" href="~/css/sidebars.css?v=@DateTime.Now.Ticks">
     <script src="~/js/site.js?v=@DateTime.Now.Ticks"></script>
 </head>
 <body class="d-flex flex-column min-vh-100 bg-secondary-subtle">
@@ -40,9 +40,9 @@ https://getbootstrap.com/docs/5.3/examples/sidebars/
             <partial name="_SubNavigation"/>
         }
         
-        <section>
+        <aside>
             @await RenderSectionAsync("MainTop", required: false)
-        </section>
+        </aside>
         
         @{
             var centerVertically = ViewData.TryGetValue(ViewDataFor.CenterVertically, out var flexColumnValue) && flexColumnValue is true;
@@ -50,10 +50,10 @@ https://getbootstrap.com/docs/5.3/examples/sidebars/
         }
         @if (!string.IsNullOrWhiteSpace(statusMessage))
         {
-            <section class="alert alert-success alert-dismissible mb-0" role="alert">
+            <aside class="alert alert-success alert-dismissible mb-0" role="alert">
                 @TempData[TempDataFor.StatusMessage]
                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </section>
+            </aside>
         }
         
         <!-- Main content -->
@@ -63,9 +63,9 @@ https://getbootstrap.com/docs/5.3/examples/sidebars/
             </main>
         </div>
         
-        <section>
+        <aside>
             @await RenderSectionAsync("MainBottom", required: false)
-        </section>
+        </aside>
     </div>
     @if (ScopeContext.MFACompleted)
     {
