--- a/Sample.Hosted/Pages/Shared/_Navbar.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Navbar.cshtml
@@ -24,9 +24,9 @@
                 @if (ScopeContext.Authenticated)
                 {
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <button class="nav-link dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" aria-expanded="false">
                             @ScopeContext.User.Name
-                        </a>
+                        </button>
                         <ul class="dropdown-menu dropdown-menu-end bg-primary dropdown-menu-dark border-0" aria-labelledby="navbarDropdown">
                             <li>
                                 <a class="dropdown-item" href="@PageFor.UserProfile.Details">My Profile</a>
