--- a/Sample.Hosted/Pages/Shared/_Sidebar.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Sidebar.cshtml
@@ -1,4 +1,4 @@
-@using Sample.Hosted.TagHelpers
+@using DRN.Framework.Hosting.TagHelpers
 @using Sample.Hosted.Utils
 
 @{
@@ -20,7 +20,7 @@
                 var titleAsTooltip = isSlim ? navItem.Title : string.Empty;
                 var borderBottom = ++index == navigationCount ? "border-bottom" : "";
                 <li class="nav-item">
-                    <a href="@navItem.Href" active-page="@navItem.Href" aria-current="page"
+                    <a href="@navItem.Href" active-page="@navItem.Href"
                        class="nav-link d-flex align-items-center py-2 @borderBottom border-top rounded-0"
                        title="@titleAsTooltip" data-bs-toggle="tooltip" data-bs-placement="right">
                         <i class="bi @navItem.Icon @iconStyle" style="font-size: 1.25rem;"
