--- a/Sample.Hosted/Pages/Shared/_SidebarActionbarItemNotifications.cshtml
+++ b/Sample.Hosted/Pages/Shared/_SidebarActionbarItemNotifications.cshtml
@@ -1,7 +1,7 @@
 @model SidebarActionItem
 
 <div class="list-group list-group-flush border-bottom scrollarea">
-    <a href="#" class="list-group-item list-group-item-action active py-3 lh-sm" aria-current="true">
+    <a href="#" class="list-group-item list-group-item-action active py-3 lh-sm">
         <div class="d-flex w-100 align-items-center justify-content-between">
             <strong class="mb-1">List group item heading</strong>
             <small>Wed</small>
