--- a/Sample.Hosted/Pages/Shared/_SidebarListGroup.cshtml
+++ b/Sample.Hosted/Pages/Shared/_SidebarListGroup.cshtml
@@ -4,7 +4,7 @@
     <span class="fs-5 fw-semibold">List group</span>
   </a>
   <div class="list-group list-group-flush border-bottom scrollarea">
-    <a href="#" class="list-group-item list-group-item-action active py-3 lh-sm" aria-current="true">
+    <a href="#" class="list-group-item list-group-item-action active py-3 lh-sm">
       <div class="d-flex w-100 align-items-center justify-content-between">
         <strong class="mb-1">List group item heading</strong>
         <small>Wed</small>
@@ -26,7 +26,7 @@
       <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
     </a>
 
-    <a href="#" class="list-group-item list-group-item-action py-3 lh-sm" aria-current="true">
+    <a href="#" class="list-group-item list-group-item-action py-3 lh-sm">
       <div class="d-flex w-100 align-items-center justify-content-between">
         <strong class="mb-1">List group item heading</strong>
         <small class="text-body-secondary">Wed</small>
@@ -47,7 +47,7 @@
       </div>
       <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
     </a>
-    <a href="#" class="list-group-item list-group-item-action py-3 lh-sm" aria-current="true">
+    <a href="#" class="list-group-item list-group-item-action py-3 lh-sm">
       <div class="d-flex w-100 align-items-center justify-content-between">
         <strong class="mb-1">List group item heading</strong>
         <small class="text-body-secondary">Wed</small>
@@ -68,7 +68,7 @@
       </div>
       <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
     </a>
-    <a href="#" class="list-group-item list-group-item-action py-3 lh-sm" aria-current="true">
+    <a href="#" class="list-group-item list-group-item-action py-3 lh-sm">
       <div class="d-flex w-100 align-items-center justify-content-between">
         <strong class="mb-1">List group item heading</strong>
         <small class="text-body-secondary">Wed</small>
