--- a/Sample.Hosted/Pages/Shared/_Footer.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Footer.cshtml
@@ -13,7 +13,7 @@
             <nav id="footerNavbar" class="d-none align-items-center">
                 <ul class="nav">
                     <li class="nav-item">
-                        <a class="nav-link py-0" href="#">Privacy</a>
+                        <a class="nav-link py-0" href="#">Privacy Policy</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link py-0" href="#">Terms</a>
@@ -30,7 +30,7 @@
                 </ul>
             </nav>
             <div id="preferenceCookieAlert" class="d-none align-items-center" role="alert">
-                <span class="me-3">We use cookies to enhance your experience. <a href="/Privacy" class="alert-link">Learn more</a>.</span>
+                <span class="me-3">We use cookies to enhance your experience. Check out our <a href="/Privacy" class="alert-link">Privacy Policy</a>.</span>
                 <button type="button" class="btn btn-primary btn-sm accept-policy me-2" aria-label="Accept" id="acceptPreferencesCookieBtn">
                     Accept
                 </button>
