--- a/Sample.Hosted/Pages/Shared/_Footer.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Footer.cshtml
@@ -13,7 +13,7 @@
             <nav id="footerNavbar" class="d-none align-items-center">
                 <ul class="nav">
                     <li class="nav-item">
-                        <a class="nav-link py-0" href="#">Privacy Policy</a>
+                        <a class="nav-link py-0" href="#">Privacy</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link py-0" href="#">Terms</a>
