--- a/Sample.Hosted/Pages/Shared/_Layout.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Layout.cshtml
@@ -14,6 +14,7 @@ https://getbootstrap.com/docs/5.3/examples/sidebars/
     <title>@ViewData[ViewDataFor.Title] - @ScopeContext.Settings.ApplicationName</title>
     
     @*https://icons.getbootstrap.com/#usage*@
+    @*todo: bootstrap customizations https://getbootstrap.com/docs/5.3/customize/overview/*@
     <link rel="icon" type="image/x-icon" href="/images/100.jpeg">
     <link rel="stylesheet" crossorigin="anonymous" referrerpolicy="no-referrer"
           href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
